--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <thead> <!-- Cabeçalho da Tabela -->
             <tr> <!-- Linha 1-->
-                <!-- Th = colunas -->
+                <!-- Th = colunas de cabeçalho -->
                 <th>Imagem</th>
                 <th>Produto</th>
                 <th>Preço unitário</th>
@@ -21,7 +21,14 @@
             </tr>
         </thead>
         <tbody>
-
+            <tr>
+                <!-- Td = dados da tabela -->
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
         </tbody>
     </table>
 </body>
