add produtos e informações

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Lojinha Borges</h1>
 
-    <table> <!-- Tabela -->
+    <table border="1"> <!-- Tabela -->
 
         <thead> <!-- Cabeçalho da Tabela -->
             <tr> <!-- Linha 1-->
@@ -23,10 +23,66 @@
         <tbody>
             <tr>
                 <!-- Td = dados da tabela -->
+                <td>
+                    <img src="./src/image/Iphone11-64Gb-Red.webp" alt="Iphone 11 Red" width="180px">
+                </td>
+                <td>
+                    <div>
+                        IPHONE 11
+                    </div>
+                    <div>
+                        64GB
+                    </div>
+                    <div>
+                        Cor: RED
+                    </div>
+                </td>
+                <td>
+                    R$ 2.324,00
+                </td>
+                <td>
+                    0
+                </td>
                 <td></td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="./src/image/IPhone14-128GbEstelar.webp" alt="Iphone 14 128GB" width="180px">
+                </td>
+                <td>
+                    <div>
+                        IPHONE 14
+                    </div>
+                    <div>
+                        128GB
+                    </div>
+                    <div>
+                        Cor: ESTELAR
+                    </div>
+                </td>
+                <td>
+                    R$ 4.154,00
+                </td>
+                <td>
+                    0
+                </td>
                 <td></td>
-                <td></td>
-                <td></td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="./src/image/Iphone16-128GbUltramarino.webp" alt="Iphone 16 128GB Ultramarino" width="180px">
+                </td>
+                <td>
+                    <div>IPHONE 16</div>
+                    <div>64GB</div>
+                    <div>Cor: ULTRAMARINO</div>
+                </td>
+                <td>
+                    R$ 5.420,00
+                </td>
+                <td>
+                    0
+                </td>
                 <td></td>
             </tr>
         </tbody>
