--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
     <link rel="stylesheet" href="css/bootstrap.css">
 
-    <script src="js/funcoes.js"></script>
     <title>Loja</title>
 </head>
 <body>
+
     <div class="container">
         <h1 class="bi bi-cart-check">Lojinha Borges</h1>
 
@@ -27,12 +25,16 @@
                 <th>Total</th>
             </tr>
         </thead>
+
+
         <tbody>
             <tr>
+
                 <!-- Td = dados da tabela -->
                 <td>
                     <img src="./src/image/Iphone11-64Gb-Red.webp" alt="Iphone 11 Red" width="100px">
                 </td>
+
                 <td>
                     <div>
                         IPHONE 11
@@ -44,64 +46,88 @@
                         Cor: RED
                     </div>
                 </td>
+
                 <td id="valor1">
-                    R$ 2.324,00
+                    2324
                 </td>
+
                 <td>
-                    <span class="badge bg-danger"><i class="bi bi-bag-dash"></i></span>
+                    <span class="badge bg-danger" onclick="alterarQtd(1, '-')"><i class="bi bi-bag-dash"></i></span>
                     <span id="qtd1">0</span>
-                    <span class="badge bg-success" onclick="adicionar(1)"><i class="bi bi-bag-plus"></i></span>
+                    <span class="badge bg-success" onclick="alterarQtd(1, '+')"><i class="bi bi-bag-plus"></i></span>
                 </td>
-                <td id="total1">0</td>
+
+                <td id="total1">
+                    0
+                </td>
+
             </tr>
+    
+
             <tr>
+
                 <td>
                     <img src="./src/image/IPhone14-128GbEstelar.webp" alt="Iphone 14 128GB" width="100px">
                 </td>
+
                 <td>
                     <div>
                         IPHONE 14
                     </div>
+
                     <div>
                         128GB
                     </div>
+
                     <div>
                         Cor: ESTELAR
                     </div>
                 </td>
+
                 <td id="valor2">
-                    R$ 4.154,00
+                    4154
                 </td>
+
                 <td>
-                    <span class="badge bg-danger"><i class="bi bi-bag-dash"></i></span>
+                    <span class="badge bg-danger" onclick="alterarQtd(2, '-')"><i class="bi bi-bag-dash"></i></span>
                     <span id="qtd2">0</span>
-                    <span class="badge bg-success" onclick="adicionar(2)"><i class="bi bi-bag-plus"></i></span>
+                    <span class="badge bg-success" onclick="alterarQtd(2, '+')"><i class="bi bi-bag-plus"></i></span>
                 </td>
+
                 <td id="total2">
                     0
                 </td>
+
             </tr>
+
+
             <tr>
                 <td>
                     <img src="./src/image/Iphone16-128GbUltramarino.webp" alt="Iphone 16 128GB Ultramarino" width="100px">
                 </td>
+
                 <td>
                     <div>IPHONE 16</div>
                     <div>64GB</div>
                     <div>Cor: ULTRAMARINO</div>
                 </td>
+
                 <td id="valor3">
-                    R$ 5.420,00
+                    5420
                 </td>
+
                 <td>
-                    <span class="badge bg-danger"><i class="bi bi-bag-dash"></i></span>
+                    <span class="badge bg-danger" onclick="alterarQtd(3, '-')"><i class="bi bi-bag-dash"></i></span>
                     <span id="qtd3">0</span>
-                    <span class="badge bg-success" onclick="adicionar(3)"><i class="bi bi-bag-plus"></i></span>
+                    <span class="badge bg-success" onclick="alterarQtd(3, '+')"><i class="bi bi-bag-plus"></i></span>
                 </td>
+
                 <td id="total3">
                     0
                 </td>
+
             </tr>
+
         </tbody>
     </table>
 
@@ -110,6 +136,9 @@
             Subtotal: R$ 0,00
         </span>
     </footer>
+
     </div>
+
+    <script src="js/funcoes.js"></script>
 </body>
 </html>
