--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     <footer class="text-center">
         <span><i class="bi bi-cash-coin"></i>
-            Subtotal: R$ 0,00
+            Subtotal: R$<span id="subTotal">0,00</span>
         </span>
     </footer>
 
